# lightdm-kde

./: CMakeLists.txt  lightdm-kde_0.2.1.orig.tar.bz2.delta  lightdm-kde_0.2.1.orig.tar.bz2.id  lightdm-kde_0.3.0.orig.tar.bz2.delta  lightdm-kde_0.3.0.orig.tar.bz2.id  lightdm-kde_0.3.1.orig.tar.bz2.delta  lightdm-kde_0.3.1.orig.tar.bz2.id  lightdm-kde_0.3.2.1.orig.tar.bz2.delta  lightdm-kde_0.3.2.1.orig.tar.bz2.id  lightdm-kde_0.3.2.2.orig.tar.bz2.delta  lightdm-kde_0.3.2.2.orig.tar.bz2.id  lightdm-kde_0.3.2.orig.tar.bz2.delta  lightdm-kde_0.3.2.orig.tar.bz2.id
debian/: changelog  (+7 more)
po/: CMakeLists.txt
po/bs/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/cs/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/da/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/de/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/el/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/es/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/et/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/fi/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  lightdm_theme_userbar.po
po/fr/: desktop_playground-base_lightdm.po  kcm_lightdm.po  lightdm_theme_classic.po  (+1 more)
(+86 files in other folders)
